# adaptive-aqp-index

./: .env.example  .gitignore  CMakeLists.txt  requirements.txt
apps/: a3i_run.cpp  a3i_sanity.cpp
configs/datasets/: ebird_us.yaml  gaia_dr3.yaml  synth10_100M.yaml  synth10_1B.yaml  synth10_1M.yaml  synth10_300M.yaml  synth10_500M.yaml  synth10_50M.yaml  taxi.yaml
configs/workloads/: ebird_us.yaml  gaia_dr3.yaml  synth10_300M.yaml  synth10_sizes.yaml  taxi.yaml
docs/: DATA_PREP.md  EXPERIMENTS.md
experiments/plans/: _defaults.yaml  eb_sweep.yaml  headline.yaml  mem_constrained.yaml  mem_sweep.yaml  nm_sweep.yaml  quicktest.yaml  scalability_sweep.yaml  selectivity_sweep.yaml  smoke.yaml  substrate_sweep.yaml  threshold_tuning.yaml
experiments/workloads/: ebird_us_clustered.csv  ebird_us_clustered.metadata.json  ebird_us_random.csv  ebird_us_random.metadata.json  gaia_dr3_clustered.csv  gaia_dr3_clustered.metadata.json  gaia_dr3_random.csv  gaia_dr3_random.metadata.json  synth10_100M_clustered.csv  synth10_100M_clustered.metadata.json  synth10_1B_clustered.csv  synth10_1B_clustered.metadata.json  synth10_1M_clustered.csv  synth10_1M_clustered.metadata.json  synth10_300M_clustered.csv  synth10_300M_clustered.metadata.json  synth10_300M_clustered_sel0.0001.csv  synth10_300M_clustered_sel0.0001.metadata.json  synth10_300M_clustered_sel0.001.csv  synth10_300M_clustered_sel0.001.metadata.json  synth10_300M_clustered_sel0.05.csv  synth10_300M_clustered_sel0.05.metadata.json  synth10_300M_clustered_sel0.1.csv  synth10_300M_clustered_sel0.1.metadata.json  synth10_300M_random.csv  synth10_300M_random.metadata.json  synth10_300M_random_sel0.0001.csv  synth10_300M_random_sel0.0001.metadata.json  synth10_300M_random_sel0.001.csv  synth10_300M_random_sel0.001.metadata.json  synth10_300M_random_sel0.05.csv  synth10_300M_random_sel0.05.metadata.json  synth10_300M_random_sel0.1.csv  synth10_300M_random_sel0.1.metadata.json  synth10_500M_clustered.csv  synth10_500M_clustered.metadata.json  synth10_50M_clustered.csv  synth10_50M_clustered.metadata.json  taxi_clustered.csv  taxi_clustered.metadata.json  (+2 more)
include/a3i/access_path/: adaptive_access_path.hpp  partition_view.hpp  substrate_factory.hpp
include/a3i/aqp/: allocator.hpp  decompose.hpp  eager_materialize.hpp  estimator.hpp  outlier_scorer.hpp  partition_state_store.hpp  position_bitset.hpp  prior_stats.hpp  query_decomposition.hpp  sampler.hpp  stratum_cursor.hpp  summary.hpp
include/a3i/core/: geometry.hpp  query.hpp  schema.hpp  types.hpp
include/a3i/engine/: method.hpp  query_engine.hpp
include/a3i/experiments/: cell_runner.hpp  truth_store.hpp  workload_generator.hpp
include/a3i/storage/: binary_column_store.hpp  index_table.hpp  manifest.hpp
include/a3i/substrates/: adaptive_kd_access_path.hpp  grid_akd_access_path.hpp  kd_crack.hpp  kd_tree.hpp  static_kd_access_path.hpp
include/a3i/tools/: csv_to_columns_pipeline.hpp  csv_to_parquet.hpp  parquet_to_columns_pipeline.hpp  synthetic_generator.hpp
include/a3i/util/: rng.hpp  tdist.hpp  version.hpp
scripts/: a3i_config.py  analyze_results.py  analyze_threshold.py  download_gaia_benchmark.py  filter_ebird_us.sh  generate_dataset.py  generate_workload.py  plot_results.py  prepare_dataset.py  run_experiments.py  shuffle_parquet.py  validate_results.py  visualize_workload.py
scripts/plotting/: __init__.py  aggregate.py  figures.py  load.py  render.py  style.py
src/access_path/: substrate_factory.cpp
src/aqp/: allocator.cpp  decompose.cpp  eager_materialize.cpp  estimator.cpp  outlier_scorer.cpp  partition_state_store.cpp  prior_stats.cpp  sampler.cpp  stratum_cursor.cpp  summary.cpp
src/engine/: method.cpp  query_engine.cpp
src/experiments/: cell_runner.cpp  truth_store.cpp  workload_generator.cpp
src/storage/: binary_column_store.cpp  index_table.cpp  manifest.cpp
src/substrates/: adaptive_kd_access_path.cpp  grid_akd_access_path.cpp  kd_crack.cpp  kd_tree.cpp  static_kd_access_path.cpp
src/tools/: csv_to_columns_pipeline.cpp  csv_to_parquet.cpp  parquet_to_columns_pipeline.cpp  synthetic_generator.cpp
src/util/: tdist.cpp
tests/: CMakeLists.txt  test_access_path.cpp  test_allocator.cpp  test_analysis.py  test_binary_column_store.cpp  test_cell_runner.cpp  test_csv_to_parquet.cpp  test_data_prep_smoke.py  test_decompose.cpp  test_differential.cpp  test_estimators.cpp  test_exact_scan.cpp  test_experiments_smoke.py  test_explore.py  test_figures.py  test_geometry.cpp  test_grid_akd.cpp  test_methods.cpp  test_partition_state_store.cpp  test_partitioner.cpp  test_position_bitset.cpp  test_query_engine.cpp  test_sampler.cpp  test_sanity.cpp  test_static_kd.cpp  test_statistical_coverage.cpp  test_statistical_smoke.cpp  test_storage.cpp  test_stratum_cursor.cpp  test_substrate_independence.cpp  test_summary.cpp  test_synthetic_generator.cpp  test_tdist.cpp  test_workload_gen.cpp  test_workload_soundness.cpp
tools/: convert_csv_to_columns.cpp  convert_parquet_to_columns.cpp  csv_to_parquet.cpp  generate_dataset.cpp  generate_workload.cpp
